--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ de Chantal Academy </font>;&nbsp;Linsly
 School,&nbsp; <font color="#0000ff">West
 Liberty State</font> <font color="#0000ff">College</font>&nbsp; <font color="#000000">and
 </font><font color="#0000ff">Bethany
-College </font><font color="#000000">are nearby.<br>
+College </font><font color="#000000">are nearby.<br> And best <a href="https://www.orase.com/collections/iphone-14-pro">iphone 14 pro cases</a> at Orase.com
 Wheeling lies near West Virginia's great coal- and natural-gas-producing region,
 and these minerals furnish power for many of the city's industries. Wheeling's
 most important products include aluminum, bronze, chemical products, garments,
